style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');

*
{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
    scroll-behavior: smooth;
    position: relative;
}

section
{
    padding: 100px;
}

.banner
{
    position: relative;
    min-height: 100vh;
    background: url(image/website-design-background-1.jpg);
    background-size: cover;
    background-position: right;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.banner h2
{
    font-size: 3em;
    color: #fff;
    font-weight: 500;
    line-height: 1.5em;
}

.banner h2 span
{
    font-weight: 700;
    font-size: 1.5em;
}

.banner h3
{
    font-size: 1.5em;
    color: #fff;
    font-weight: 500;
}

.btn
{
    position: relative;
    background: #fff;
    display: inline-block;
    color: rgb(7, 3, 3);
    margin-top: 20px;
    padding: 10px 30px;
    font-size: 18px;
    text-transform: uppercase;
    text-decoration: none;
    letter-spacing: 2px;
    font-weight: 500;
}

header
{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 40px 100px;
    z-index: 1000;
    display: flex;
    justify-content: space-between;
    align-items: center;
    transition: 0.5s;
}

header.sticky
{
    background: #fff;
    padding: 20px 100px;
    box-shadow: 0 5px 20px rgba(0,0,0,0.1);
}

header .logo
{
    color: #fff;
    font-size: 21px;
    text-transform: uppercase;
    text-decoration: none;
    font-weight: 700;
    letter-spacing: 2px;
    
}

header.sticky .logo
{
    color: #111;
}

header ul
{
    position: relative;
    display: flex;
}

header ul li
{
    position: relative;
    list-style: none;
}

header ul li a
{
    position: relative;
    display: inline-block;
    margin: #fff;
    margin: 0 15px;
    color: #fff;
    text-decoration: none;
}

header.sticky ul li a
{
    color: #111;
}

.heading
{
    width:100%;
    text-align: center;
    margin-bottom: 30px;
    color: #111;
}

.heading h2
{
    font-weight: 600;
    font-size: 30px;
}


.content
{
    display: flex;
    justify-content: space-between;
}

.contentBx h3
{
    font-size: 24px;
    margin-bottom: 10px;
}

.w50
{
    min-width: 50%;
}

img
{
    max-width: 100%;
    padding: 40px 20px;
}

.skills .heading.white 
{
    color: #111;
}

.skills .heading.white h2
{
    font-weight: 600;
    font-size: 30px;
}

.skills .content
{
    display: flex;
    grid-template-columns: repeat(3, 1fr);
    justify-content: center;
    align-items: center;
    text-align: center;
    grid-gap: 1rem;
    padding: 1rem 80px;
    font-size: 1.2rem;
    font-weight: 500;
    flex-wrap: wrap;
    flex-direction: row;
}

.skillsBx
{
    padding: 1rem;
    color: #111;
    cursor: pointer;
}

.skill-title
{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0.5rem;
    margin-bottom: 0.5rem;
}

.projects
{
    background: #111;
}

.heading.white
{
    color: #fff;
}

.projects .content
{
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    flex-direction: row;
}

.projects .content .projectsBx
{
    padding: 40px 20px;
    background: #222;
    color: #fff;
    max-width: 500px;
    margin: 20px;
    text-align: center;
    transition: 0.5s;
}

.projects .content .projectsBx:hover
{
    background: #2196f3;
}

.projects .content .projectsBx h2
{
    font-size: 20px;
    font-weight: 600;
}

.projects .content .projectsBx h3
{
    font-size: 15px;
    font-weight: 500;
}

.projects .content .projectsBx p
{
    font-size: 12px;
    font-weight: 500;
}

.blog .content .heading
{
    font-weight: 600;
    font-size: 20px;
}

.contact
{
    background: #111;
}

.formBx
{
    min-width: 60%;
}

.formBx form
{
    display: flex;
    flex-direction: column;
}

.formBx form h3,
.contactInfo h3
{
    color: #fff;
    font-size: 20px;
    font-weight: 500;
    margin-bottom: 10px;
}

.formBx form input,
.formBx form textarea
{
    margin-bottom: 20px;
    padding: 15px;
    font-size: 16px;
    border: none;
    outline: none;    
    background: #222;
    color: #fff;
    resize: none;
}

.formBx form textarea
{
    min-height: 200px;
}

.formBx form input::placeholder,
.formBx form textarea::placeholder
{
    color: #999;
}

.formBx form input[type="submit"]
{
    max-width: 100px;
    background: #2196f3;
    cursor: pointer;
    text-transform: uppercase;
    Letter-spacing: 2px;
}

.contactInfo
{
    min-width: 40%;
}

.contactInfoBx .box
{
    position: relative;
    padding: 20px 0;
    display: flex;
}

.contactInfoBx .box .icon
{
    min-width: 40px;
    padding-top: 4px;
    color: #fff;
    display: flex;
    justify-content: center;
    align-items: flex-start;
    font-size: 24px;
}

.contactInfoBx .box .text
{
    display: flex;
    margin-left: 20px;
    font-size: 16px;
    color: #fff;
    flex-direction: column;
    font-weight: 300;
}

.contactInfoBx .box .text h3
{
    font-weight: 500;
    color: #2196f3;
    margin-bottom: 0;
}

.contactInfoBx .box .text a
{
    font-weight: 500;
    color: #fff;
    margin-bottom: 0;
}

@media (max-width: 991px)
{
    header,
    header.sticky
    {
        padding: 20px 50px;
        z-index: 1000;
    }
    .menu
    {
        position: fixed;
        top: 75px;
        left: -100%;
        display: block;
        padding: 100px 50px;
        text-align: center;
        width: 100%;
        height: 100vh;
        background: #fff;
        transition: 0.5s;
        z-index: 999;
        border-top: 1px solid rgba(0,0,0,0.2);
    }
    .menu.active
    {
        Left: 0;
    }
    header ul li a
    {
        color: #111;
        font-size: 24px;
        margin: 10px;
    }
    .toggle
    {
        width: 40px;
        height: 40px;
        background: url(image/menu.png);
        background-position: center;
        background-repeat: no-repeat;
        background-size: 30px;
        cursor: pointer;
    }
    .toggle.active
    {
        background: url(image/close.png);
        background-position: center;
        background-repeat: no-repeat;
        background-size: 25px;
        cursor: pointer;
    }
    header.sticky .toggle
    {
        filter: invert(1);
    }
    section {
        padding: 100px 50px;
    }
    .banner
    {
        padding: 150px 50px 100px;
    }
    .banner h2
    {
        font-size: 1.5em;
    }
    .banner h3
    {
        font-size: 1em;
    }
    .btn
    {
        margin-top: 10px;
        padding: 10px 20px;
        font-size: 16px;
    }
    .heading h2
    {
        font-weight: 600;
        font-size: 24px;        
    }
    .contentBx h3
    {
        font-size: 20px;
    }
    .content
    {
        flex-direction: column;
    }
    .w50
    {
        margin-bottom: 20px;
    }
    .projects .content .projectsBx
    {
        margin:10px;
    }
    .contactInfo 
    {
        margin: 20px 0;
    }

    @media (max-width: 600px)
    {
        header,
        header.sticky
        {
            padding: 20px 50px;
        }
        .banner 
        {
            padding: 150px 20px 100px;
        }
        section
        {
            padding: 100px 20px;
        }
    }


}

